veecle-os-runtime-macros/tests/ui/actor/return_ok_int.stderr
error[E0277]: #[veecle_os_runtime::actor] functions should return either a `Result<Infallible, _>` or `Infallible`
 --> tests/ui/actor/return_ok_int.rs:6:1
  |
6 | #[veecle_os_runtime_macros::actor]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not a valid actor return type
  |
  = help: the trait `IsActorResult` is not implemented for `Result<i32, Infallible>`
  = help: the trait `IsActorResult` is implemented for `Result<Infallible, E>`

error[E0277]: #[veecle_os_runtime::actor] functions should return either a `Result<Infallible, _>` or `Infallible`
  --> tests/ui/actor/return_ok_int.rs:10:6
   |
10 | ) -> Result<i32, Infallible> {
   |      ^^^^^^ not a valid actor return type
   |
   = help: the trait `IsActorResult` is not implemented for `Result<i32, Infallible>`
   = help: the trait `IsActorResult` is implemented for `Result<Infallible, E>`

error[E0277]: #[veecle_os_runtime::actor] functions should return either a `Result<Infallible, _>` or `Infallible`
  --> tests/ui/actor/return_ok_int.rs:10:6
   |
10 | ) -> Result<i32, Infallible> {
   |      ^^^^^^^^^^^^^^^^^^^^^^^ not a valid actor return type
   |
   = help: the trait `IsActorResult` is not implemented for `Result<i32, Infallible>`
   = help: the trait `IsActorResult` is implemented for `Result<Infallible, E>`
